# cli-v2

./: .gitignore  .satori.yml  README.md  pyproject.toml  pyrightconfig.json
.satori/import/: .satori.yml
src/satori_cli/: __init__.py  api.py  auth.py  config.py  constants.py  models.py  playbooks_api.py
src/satori_cli/commands/: config.py  execution.py  job.py  local.py  monitor.py  output.py  playbook.py  report.py  run.py  scan.py  search.py  shards.py  shell.py  stop.py  update.py
src/satori_cli/utils/: arguments.py  bundler.py  console.py  format.py  groups.py  misc.py  options.py  output_filter.py  wrappers.py
src/satori_cli/utils/execution/: models.py  runner.py  utils.py
src/satori_cli/utils/parsers/: __init__.py  dynamic.py
src/satori_cli_v2/: __init__.py  api.py  auth.py  config.py  constants.py  exceptions.py
src/satori_cli_v2/commands/: execution.py  job.py  monitor.py  report.py  run.py  scan.py
src/satori_cli_v2/utils/: arguments.py  bundler.py  console.py  options.py  parameters.py  wrappers.py
tests/: __init__.py  test_auth.py  test_config_baseline.py  test_config_credentials.py  test_config_merge.py  test_config_profile.py  test_config_save.py  test_dynamic_parser.py  test_format.py  test_output_filter.py  test_playbook.py  test_run_executions.py
