[project]
name = "satori-cli"
version = "0.1.0"
authors = [{ name = "Satori CI", email = "info@satori.ci" }]
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.7.1",
    "click>=8.1.7",
    "rich-click>=1.8.3",
    "deepmerge>=2.0",
    "pyyaml>=6.0.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
satori = "satori_cli:main"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
_.env_file = ".env"
