[project]
name = "satori-cli"
version = "0.1.0"
authors = [{ name = "Satori CI", email = "info@satori.ci" }]
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.7.1",
    "click>=8.1.7",
    "rich-click>=1.8.3",
    "deepmerge>=2.0",
    "pyyaml>=6.0.2",
    "msgpack>=1.1.0",
    "repro-zipfile>=0.4.0",
    "click-option-group>=0.5.8",
    "httpx-sse>=0.4.3",
    "paramiko>=4.0.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
satori-v2 = "satori_cli:main"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
_.env_file = ".env"

[tool.ruff.lint]
extend-select = ["I"]

[dependency-groups]
dev = [
    "ruff>=0.9.7",
]
